--- a/front-end/TesteTecnicoEL.WebUI/Views/Aluguel/Simular.cshtml
+++ b/front-end/TesteTecnicoEL.WebUI/Views/Aluguel/Simular.cshtml
@@ -5,21 +5,21 @@
 @{
     ViewData["Title"] = "Selecionar";
 }
-@{ 
+@{
     var veiculo = ViewBag.Veiculo as Veiculo;
 }
 
-<h1>Selecionar</h1>
+<h1>@ViewData["Title"]</h1>
 
 <h4>Simular locação para o veículo @veiculo.Modelo.Marca.Nome @veiculo.Modelo.Nome @veiculo.AnoFabricacao - Placa @veiculo.Placa</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Simular">
-            <div asp-validation-summary="ModelOnly" class="text-danger">
-                @if(ViewBag.Erro != null)
+            <div class="text-danger">
+                @if (ViewBag.Erro != null)
                 {
-                    @string.Join("<br />", ViewBag.Erro as string[]);
+                    @Html.Raw(string.Join("<br />", ViewBag.Erro as string[]));
                 }
             </div>
             <div class="form-group">
@@ -33,16 +33,6 @@
                 <span asp-validation-for="DataFim" class="text-danger"></span>
             </div>
             @Html.Hidden(nameof(Model.IdVeiculo), veiculo.Id.ToString())
-            @*<div class="form-group">
-                <label asp-for="IdVeiculo" class="control-label"></label>
-                <input asp-for="IdVeiculo" class="form-control" />
-                <span asp-validation-for="IdVeiculo" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdUsuario" class="control-label"></label>
-                <input asp-for="IdUsuario" class="form-control" />
-                <span asp-validation-for="IdUsuario" class="text-danger"></span>
-            </div>*@
             <div class="form-group">
                 <input type="submit" value="Simular" class="btn btn-primary" />
             </div>
