--- a/front-end/TesteTecnicoEL.WebUI/Views/Cliente/Criar.cshtml
+++ b/front-end/TesteTecnicoEL.WebUI/Views/Cliente/Criar.cshtml
@@ -1,22 +1,25 @@
 ﻿@model TesteTecncicoEL.Api.Models.ClienteDto
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Cadastro";
 }
 
-<h1>Cadastro</h1>
+<h1>@ViewData["Title"]</h1>
 
 @*<h4>ClienteDto</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @*<div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>*@
+        <form asp-action="Criar">
+            <div class="text-danger">
+                @if (ViewBag.Erro != null)
+                {
+                    @Html.Raw(string.Join("<br />", ViewBag.Erro as string[]));
+                }
+            </div>
+            <h4>
+                Dados pessoais
+            </h4>
             <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
@@ -37,6 +40,35 @@
                 <input asp-for="Senha" class="form-control" type="password" />
                 <span asp-validation-for="Senha" class="text-danger"></span>
             </div>
+            <h4>
+                Endereço
+            </h4>
+            <div class="form-group">
+                <label asp-for="Endereco.Logradouro" class="control-label"></label>
+                <input asp-for="Endereco.Logradouro" class="form-control" />
+                <span asp-validation-for="Endereco.Logradouro" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Endereco.Numero" class="control-label"></label>
+                <input asp-for="Endereco.Numero" class="form-control" placeholder="Vazio para sem número" />
+                <span asp-validation-for="Endereco.Numero" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Endereco.Complemento" class="control-label"></label> (opcional)
+                <input asp-for="Endereco.Complemento" class="form-control" />
+                <span asp-validation-for="Endereco.Complemento" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Endereco.Cidade" class="control-label"></label>
+                <input asp-for="Endereco.Cidade" class="form-control" />
+                <span asp-validation-for="Endereco.Cidade" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Endereco.Estado" class="control-label"></label>
+                <input asp-for="Endereco.Estado" class="form-control" />
+                <span asp-validation-for="Endereco.Estado" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
