--- a/front-end/TesteTecnicoEL.WebUI/Views/Shared/_Layout.cshtml
+++ b/front-end/TesteTecnicoEL.WebUI/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Aluguel" asp-action="Historico">Historico</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Aluguel" asp-action="Index">Meu Historico</a>
                             </li>
                             <li class="nav-item">
                                 <div class="nav-item nav-link">
