--- a/front-end/TesteTecnicoEL.WebUI/Views/Aluguel/_CamposDadosAluguel.cshtml
+++ b/front-end/TesteTecnicoEL.WebUI/Views/Aluguel/_CamposDadosAluguel.cshtml
@@ -2,6 +2,10 @@
 
 @using System.Globalization;
 
+@{ 
+    var horas = (int)Math.Ceiling(Model.DataDevolucaoPrevista.Subtract(Model.DataInicio).TotalHours);
+}
+
 <div class="text-danger">
     @if (ViewBag.Erro != null)
     {
@@ -18,17 +22,18 @@
 <div class="form-group">
     <label asp-for="DataInicio" class="control-label"></label>
     <input asp-for="DataInicio" class="form-control" readonly />
-    <span asp-validation-for="DataInicio" class="text-danger"></span>
 </div>
 <div class="form-group">
     <label asp-for="DataDevolucaoPrevista" class="control-label"></label>
     <input asp-for="DataDevolucaoPrevista" class="form-control" readonly />
-    <span asp-validation-for="DataDevolucaoPrevista" class="text-danger"></span>
+</div>
+<div class="form-group">
+    <label class="control-label">Tempo de Reserva</label>
+    <input type="text" class="form-control" value="@horas @(horas == 1 ? "hora" : "horas")" readonly />
 </div>
 <div class="form-group">
     <label asp-for="Veiculo" class="control-label"></label>
     <input type="text" class="form-control" value="@Model.Veiculo.Modelo.Marca.Nome @Model.Veiculo.Modelo.Nome @Model.Veiculo.AnoFabricacao - Placa @Model.Veiculo.Placa" readonly />
-    <span asp-validation-for="Veiculo" class="text-danger"></span>
 </div>
 <div class="form-group">
     <label asp-for="ValorAluguel" class="control-label"></label>
