limpeza de código

--- a/front-end/TesteTecnicoEL.WebUI/Views/Shared/_Layout.cshtml
+++ b/front-end/TesteTecnicoEL.WebUI/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - TesteTecnicoEL.WebUI</title>
+    <title>@ViewData["Title"] - Locadora TesteTecnicoEL</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">TesteTecnicoEL.WebUI</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Locadora TesteTecnicoEL</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -22,16 +22,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Veiculo" asp-action="Index">Veiculos</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Veiculo" asp-action="Index">Início</a>
                         </li>
                         @if (usuario == null)
                         {
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Acessar">Acessar</a>
-                            </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Criar">Cadastrar</a>
                             </li>
@@ -41,15 +35,25 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Aluguel" asp-action="Index">Meu Historico</a>
                             </li>
-                            <li class="nav-item">
-                                <div class="nav-item nav-link">
-                                    @usuario.Nome
-                                    <a class="text-dark" asp-area="" asp-controller="Cliente" asp-action="Sair">(Sair)</a>
-                                </div>
-                            </li>
 
                         }
                     </ul>
+                </div>
+                
+                <div class="menu-right">
+                    <div class="avatar">
+                        @if (usuario == null)
+                        {
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Cliente" asp-action="Acessar">Acessar</a>
+
+                        }
+                        else
+                        {
+                            @usuario.Nome
+                            <a class="text-dark" asp-area="" asp-controller="Cliente" asp-action="Sair">(Sair)</a>
+                        }
+
+                    </div>
                 </div>
             </div>
         </nav>
@@ -62,7 +66,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - TesteTecnicoEL.WebUI - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Locadora TesteTecnicoEL - <a asp-area="" asp-controller="Home" asp-action="Privacy">Política de privacidade</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
