--- a/front-end/TesteTecnicoEL.WebUI/wwwroot/css/site.css
+++ b/front-end/TesteTecnicoEL.WebUI/wwwroot/css/site.css
@@ -69,3 +69,16 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.container-carros{
+    margin: 20px 0px;
+}
+
+.preco-aluguel-hora {
+    white-space: nowrap;
+    font-weight: bold;
+}
+
+.card {
+    margin-bottom: 20px;
+}
