Refactor geral da autenticação

--- a/front-end/TesteTecnicoEL.WebUI/Views/Aluguel/ResultadoLocacao.cshtml
+++ b/front-end/TesteTecnicoEL.WebUI/Views/Aluguel/ResultadoLocacao.cshtml
@@ -1,7 +1,7 @@
 ﻿@model TesteTecnicoEL.Dominio.Locacao.Aluguel
 
 @using TesteTecnicoEL.Dominio.Veiculos
-@using TesteTecncicoEL.Api.Models 
+@using TesteTecnicoEL.Api.Models 
 
 @{
     ViewData["Title"] = "Aluguel confirmado";
