--- a/front-end/TesteTecnicoEL.WebUI/Views/Aluguel/Simular.cshtml
+++ b/front-end/TesteTecnicoEL.WebUI/Views/Aluguel/Simular.cshtml
@@ -1,4 +1,4 @@
-﻿@model TesteTecncicoEL.Api.Models.ParametrosLocacaoDto
+﻿@model TesteTecnicoEL.Api.Models.ParametrosLocacaoDto
 
 @using TesteTecnicoEL.Dominio.Veiculos
 
