--- a/front-end/TesteTecnicoEL.WebUI/Views/Cliente/Acessar.cshtml
+++ b/front-end/TesteTecnicoEL.WebUI/Views/Cliente/Acessar.cshtml
@@ -1,4 +1,4 @@
-﻿@model TesteTecncicoEL.Api.Models.ClienteDto
+﻿@model TesteTecnicoEL.Api.Models.ClienteDto
 
 @{
     ViewData["Title"] = "Acesso";
