--- a/front-end/TesteTecnicoEL.WebUI/Views/Shared/_Layout.cshtml
+++ b/front-end/TesteTecnicoEL.WebUI/Views/Shared/_Layout.cshtml
@@ -25,34 +25,13 @@
         </main>
     </div>
 
-    <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <div class="modal fade" id="frm-login-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="titulo-modal-acesso">Acesso</h5>
-                    <h5 class="modal-title" id="titulo-modal-cadastro" hidden>Cadastro</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="fechar-modal">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
@@ -160,10 +139,6 @@
                             <p class="mb-0">Já tem uma conta? <a href="#" class="link" onclick="AlternarFormAcessoCadastro('div-frm-login');">Acesse</a></p>
                         </div>
                     </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="fechar-modal-cadastro">Close</button>
-                    <button type="button" class="btn btn-primary">Enviar</button>
                 </div>
             </div>
         </div>
